--- a/viteenv/.env.development
+++ b/viteenv/.env.development
@@ -1,4 +1,3 @@
 # .env.develop 开发环境参数值
-VITE_APP_BASE_API = 'http://192.168.15.201:8082/ghrk/'
-# VITE_APP_APOLLO = 'http://localhost:8080/configs/'
-VITE_APP_APOLLO_API = 'http://192.168.15.201:8080/configs/'
+VITE_APP_BASE_API = 'http://192.168.15.201:8083/param/'
+
