类型维护功能基本实现，现需要后端传入两个参数：1.namespace 2.codeUrl以便展示与维护

--- a/viteenv/.env.development
+++ b/viteenv/.env.development
@@ -1,3 +1,4 @@
 # .env.develop 开发环境参数值
-VITE_APP_BASE_API = 'http://192.168.15.201:8083/param/'
+# VITE_APP_BASE_API = 'http://192.168.182.26:8083/param/'
+VITE_APP_BASE_API = 'http://localhost:8083/param/'
 
