--- a/viteenv/.env.development
+++ b/viteenv/.env.development
@@ -1,4 +1,4 @@
 # .env.develop 开发环境参数值
-# VITE_APP_BASE_API = 'http://192.168.182.26:8083/param/'
-VITE_APP_BASE_API = 'http://localhost:8083/param/'
+VITE_APP_BASE_API = 'http://192.168.182.26:8083/param/'
+# VITE_APP_BASE_API = 'http://localhost:8083/param/'
 
